# python-test-automation

./: .gitignore  LICENSE  README.md  README.mdn  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: python-app.yml
src/webapp/: webapp.py
tests/: test_webapp.py
